--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
       </div>
 
     </main>
+    <footer class="blog-footer">
+      <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>
+        <a href="#">Back to top</a>
+      </p>
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
