--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
     <title>Hello, world!</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H6QG3DKDYQ"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-209734607-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-H6QG3DKDYQ');
+      gtag('config', 'UA-209734607-1');
     </script>
   </head>
   <body>
