--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
       <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
-          <a class="p-2 link-secondary" href="page1.html">Page1</a>
-          <a class="p-2 link-secondary" href="page2.html">Page2</a>
+          <a class="p-2 link-secondary submit-btn" href="page1.html">Page1</a>
+          <a class="p-2 link-secondary submit-btn" href="page2.html">Page2</a>
         </nav>
       </div>
     </div>
