--- a/page2.html
+++ b/page2.html
@@ -9,6 +9,8 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MXJHRD3');</script>
+    var dimensionValue = 'page2';
+    ga('set', 'dimension1', dimensionValue);
     <!-- End Google Tag Manager -->
     <!-- Required meta tags -->
     <meta charset="utf-8">
