--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-2Q3TGX87LV"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-6NL98JM4FR"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
