--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-2Q3TGX87LV');
+        gtag('config', 'G-6NL98JM4FR');
       </script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
