--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
         <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
       </nav>
     </header>
-    <input class="btn btn-primary" type="button" value="Input">
+    <button type="button" class="btn btn-outline-primary jordan">Click</button>
 
     <main>
       <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
