--- a/page1.html
+++ b/page1.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
     <button type="button" class="btn btn-outline-primary jordan">Click</button>
-    <iframe src="https://www.google.com/" title="W3Schools Free Online Web Tutorials">
+    <iframe src="" title="W3Schools Free Online Web Tutorials">
     </iframe>
 
     <main>
