--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <nav class="nav d-flex justify-content-between">
           <a class="p-2 link-secondary page1" href="page1.html">Page1</a>
           <a class="p-2 link-secondary page2" href="page2.html">Page2</a>
+          <a class="p-2 link-secondary page2" href="https://jordanfan824.github.io/">jordanfan824</a>
         </nav>
       </div>
     </div>
