--- a/page1.html
+++ b/page1.html
@@ -43,7 +43,8 @@
       title="Inline Frame Example"
       width="1000"
       height="200"
-      src="https://jordanfan824.github.io/">
+      src="https://jordanfan824.github.io/"
+      sandbox>
     </iframe>
 
     <main>
