--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -43,8 +42,7 @@
       title="Inline Frame Example"
       width="1000"
       height="200"
-      src="https://jordanfan824.github.io/"
-      sandbox>
+      src="https://jordanfan824.github.io/">
     </iframe>
 
     <main>
