--- a/parent.html
+++ b/parent.html
@@ -16,11 +16,11 @@
 			//要傳遞的資料，可以是字串也可以是物件
 			{ time: new Date(), msg: 'msg from parent'}, 
 			//指定接受資料的對象，雖然可以用 * 全面開放，但不建議
-			'http://child.utopia.net');
+			'https://jordanfan824.github.io');
 	});
 	window.addEventListener('message', function(e) {
 		//務必檢查呼叫來源，只處理來自特定網域的呼叫，以免被惡意利用
-		if (e.origin !== 'http://child.utopia.net') 
+		if (e.origin !== 'https://jordanfan824.github.io') 
 			return;
 		document.getElementById('s').innerText = e.data;
 	});
